transpiler/internal/tests/types/soundness/mep5_p05_match_arms_disagree.mochi
// MEP-5 P5: match arms with disagreeing types must be rejected.
// The prior rule silently widened to `any`, hiding the soundness hole.
let x = match 1 {
  1 => 42
  _ => "no"
}
